--- a/executor/package.json
+++ b/executor/package.json
@@ -15,6 +15,8 @@
     "body-parser": "^1.14.2",
     "dockerode": "^2.2.9",
     "express": "^4.13.4",
+    "jsonwebtoken": "^5.5.4",
+    "node-fetch": "^1.3.3",
     "thinky": "^2.2.4"
   },
   "devDependencies": {
