--- a/executor/package.json
+++ b/executor/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:client": "rollup -c"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +22,10 @@
   },
   "devDependencies": {
     "babel-eslint": "^4.1.8",
+    "babel-preset-es2015-rollup": "^1.1.1",
     "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.0"
+    "eslint-config-airbnb": "^5.0.0",
+    "rollup": "^0.25.3",
+    "rollup-plugin-babel": "^2.3.9"
   }
 }
