--- a/executor/package.json
+++ b/executor/package.json
@@ -26,6 +26,7 @@
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^5.0.0",
     "rollup": "^0.25.3",
-    "rollup-plugin-babel": "^2.3.9"
+    "rollup-plugin-babel": "^2.3.9",
+    "rollup-plugin-uglify": "^0.2.0"
   }
 }
