--- a/executor/package.json
+++ b/executor/package.json
@@ -5,14 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:client": "rollup -c"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.5.1",
-    "babel-preset-es2015": "^6.5.0",
     "body-parser": "^1.14.2",
     "dockerode": "^2.2.9",
     "express": "^4.13.4",
@@ -22,11 +20,9 @@
   },
   "devDependencies": {
     "babel-eslint": "^4.1.8",
+    "babel-plugin-transform-react-jsx": "^6.5.0",
     "babel-preset-es2015-rollup": "^1.1.1",
     "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.0",
-    "rollup": "^0.25.3",
-    "rollup-plugin-babel": "^2.3.9",
-    "rollup-plugin-uglify": "^0.2.0"
+    "eslint-config-airbnb": "^5.0.0"
   }
 }
