--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "botapi-client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c"
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "snabbdom": "^0.3.1",
+    "snabbdom-jsx": "^0.3.0"
+  },
+  "devDependencies": {
     "babel-eslint": "^4.1.8",
     "babel-plugin-transform-react-jsx": "^6.5.0",
     "babel-preset-es2015-rollup": "^1.1.1",
@@ -19,6 +23,11 @@
     "rollup-plugin-babel": "^2.3.9",
     "rollup-plugin-commonjs": "^2.2.1",
     "rollup-plugin-node-resolve": "^1.4.0",
-    "rollup-plugin-uglify": "^0.2.0"
+    "rollup-plugin-uglify": "^0.2.0",
+    "babel-plugin-transform-class-properties": "^6.5.0",
+    "babel-plugin-transform-react-jsx": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015-loose-rollup": "^7.0.0",
+    "babel-preset-stage-0": "^6.5.0"
   }
 }
