Read npm packages from a file

--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -3,7 +3,7 @@ FROM mhart/alpine-node:latest
 WORKDIR /src
 COPY . .
 
-RUN npm install node-fetch lodash helg
+RUN npm install $(cat packages.txt)
 
 ENTRYPOINT ["node", "index.js"]
 CMD ["NO_DATA"]
