--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,12 @@
   "name": "botapi-client",
   "version": "1.0.0",
   "description": "",
-  "main": "bundle.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c"
+    "tool": "babel-node --presets es2015",
+    "build": "npm run tool tools/build.js",
+    "serve": "npm run tool tools/serve.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,20 +16,21 @@
     "snabbdom-jsx": "^0.3.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.5.1",
     "babel-eslint": "^4.1.8",
+    "babel-plugin-transform-class-properties": "^6.5.0",
     "babel-plugin-transform-react-jsx": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015-loose-rollup": "^7.0.0",
     "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "browser-sync": "^2.11.1",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^5.0.0",
     "rollup": "^0.25.3",
     "rollup-plugin-babel": "^2.3.9",
     "rollup-plugin-commonjs": "^2.2.1",
     "rollup-plugin-node-resolve": "^1.4.0",
-    "rollup-plugin-uglify": "^0.2.0",
-    "babel-plugin-transform-class-properties": "^6.5.0",
-    "babel-plugin-transform-react-jsx": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-es2015-loose-rollup": "^7.0.0",
-    "babel-preset-stage-0": "^6.5.0"
+    "rollup-plugin-uglify": "^0.2.0"
   }
 }
