--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "redux": "^3.3.1",
     "snabbdom": "^0.3.1",
     "snabbdom-jsx": "^0.3.0"
   },
@@ -31,6 +32,7 @@
     "rollup-plugin-babel": "^2.3.9",
     "rollup-plugin-commonjs": "^2.2.1",
     "rollup-plugin-node-resolve": "^1.4.0",
+    "rollup-plugin-replace": "^1.1.0",
     "rollup-plugin-uglify": "^0.2.0"
   }
 }
